--- a/Notation/Notation.csproj
+++ b/Notation/Notation.csproj
@@ -6,4 +6,10 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Notation.Domain.Core\Notation.Domain.Core.csproj" />
+    <ProjectReference Include="..\Notation.Domain.Intarfaces\Notation.Domain.Intarfaces.csproj" />
+    <ProjectReference Include="..\Notation.Infrastructure.Data\Notation.Infrastructure.Data.csproj" />
+  </ItemGroup>
+
 </Project>
