--- a/Notation.Domain.Core/Notation.Domain.Core.csproj
+++ b/Notation.Domain.Core/Notation.Domain.Core.csproj
@@ -10,4 +10,8 @@
     <None Remove="DTO\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.17.1" />
+  </ItemGroup>
+
 </Project>
