create base entity, delete unused code

--- a/Notation/appsettings.json
+++ b/Notation/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "AppSettings": {
-    "ConnectionString": "mongodb://localhost:27017/notation"
-
+  "MongoDB": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "notation"
   }
 }
